--- a/template1/estilos.css
+++ b/template1/estilos.css
@@ -293,7 +293,7 @@ header label{
 
 .suscribete form input[type="email"]{
 	padding: 0 2rem;
-	font-size: 1.7ram;
+	font-size: 1.7rem;
 	background: none;
 	width: 100%;
 	color: white;
