--- a/estilos.css
+++ b/estilos.css
@@ -27,6 +27,7 @@
 html{
 	font-size: 62.4%;
 	overflow-x: hidden;
+	scroll-behavior: smooth;
 }
 
 body{
@@ -284,7 +285,7 @@ header label{
 
 .suscribete form input[type="email"]{
 	padding: 0 2rem;
-	font-size: 1.7ram;
+	font-size: 1.7rem;
 	background: none;
 	width: 100%;
 	color: white;
