--- a/estilos.css
+++ b/estilos.css
@@ -248,9 +248,10 @@ header label{
 	text-align: center;
 	padding: 5rem 2rem;
 	background: url(/img/fondo_sub.jpg) no-repeat;
-	 background-size: cover;
-	 position: center;
-	 margin: 7rem 0 5rem;
+	background-size: cover;
+	 /*position: center;*/
+	background-position: center;
+	margin: 7rem 0 5rem;
 }
 
 .suscribete-text{
