--- a/estilos.css
+++ b/estilos.css
@@ -7,6 +7,7 @@
 	--color04: #ffffff;
 	--color05: linear-gradient(90deg, var(--color02), var(--color01));
 	--color06: rgb(255, 255, 255);
+	--color07: rgb(249 255 0):
 }
 
 *{
@@ -161,13 +162,13 @@ header label{
 } */
 
 .inicio .content h3{
-	font-size: 5.5rem;
-	color: #ffffff;
+	font-size: 7.5rem;
+	color: var(--color04);
 	text-transform: uppercase;
 }
 
 .inicio .content h3 span{
-	color:rgb(0, 0, 0);
+	color: var(--color07);
 	text-transform: uppercase;
 }
 
@@ -590,6 +591,7 @@ header label{
 #trucazo{
 	opacity: 0;
 }
+
 
 
 
