Restore and update estilos.css with new styles

--- a/estilos.css
+++ b/estilos.css
@@ -474,7 +474,7 @@ header label{
 	font-weight: normal;
 	letter-spacing: .1rem;
 	color: var(--color06);
-	border-top: .1rem solid rgb(151, 64, 64);
+	border-top: var(--color04);
 	padding: 2.5rem 1rem;
 	text-align: center;
 }
@@ -591,6 +591,7 @@ header label{
 #trucazo{
 	opacity: 0;
 }
+
 
 
 
