--- a/template8/estilos.css
+++ b/template8/estilos.css
@@ -1,10 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500&display=swap');
 
 :root{
-	--color1: #5e1212;
-	--color2: #a61c1c;
-	--color3: #c06262;
-	--color4: linear-gradient(90deg, var(--color2), var(--color1));
+	--color01: #000000;
+	--color02: #7a7a7a;
+	--color03: #008080;
+	--color04: #ffffff;
+	--color05: linear-gradient(90deg, var(--color02), var(--color01));
+	--color06: rgb(255, 255, 255);
+	--color07: #f9ff00;
 }
 
 *{
@@ -18,17 +21,18 @@
 }
 
 *::selection{
-	background: var(--color2);
+	background: var(--color02);
 	color: white;
 }
 
 html{
 	font-size: 62.4%;
 	overflow-x: hidden;
+	scroll-behavior: smooth;
 }
 
 body{
-	background-color: #f9f9f9;
+	background-color: var(--color04);
 }
 
 section{
@@ -41,9 +45,9 @@ section{
 .btn{
 	display: inline-block;
 	margin-top: 1rem;
-	padding: .8rem 3rem;
+	padding: .8rem 1rem;
 	border-radius: 5rem;
-	background: var(--color4);
+	background: var(--color05);
 	font-size: 1.8rem;
 	cursor: pointer;
 	box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
@@ -51,19 +55,34 @@ section{
 	color: white;
 }
 
+a.btn {
+    padding-right: 5rem;
+}
+
 .btn:hover{
 	transform: scale(1.1);
 }
 
+i {
+    margin-inline: 1rem;
+}
+
 .heading{
 	text-align: center;
-	background: var(--color1);
+	background: var(--color01);
 	color: transparent;
 	-webkit-background-clip: text;
 	background-clip: text;
 	font-size: 3.5rem;
 	text-transform: uppercase;
 	padding: 1rem;
+}
+
+h3.heading{
+	font-size: 3rem;
+	color: var(--color02);
+	text-align: center;
+	text-transform: uppercase;
 }
 
 header{
@@ -83,21 +102,21 @@ header{
 
 header .logo{
 	font-size: 2rem;
-	color: var(--color1);	
+	color: var(--color01);	
 }
 
 header .logo span{
-	color: var(--color2);
+	color: var(--color02);
 }
 
 header .navbar a{
 	font-size: 1.8rem;
 	margin-left: 2rem;
-	color: var(--color1);
+	color: var(--color01);
 }
 
 header .navbar a:hover{
-	color: var(--color2);
+	color: var(--color02);
 }
 
 header input{
@@ -106,7 +125,7 @@ header input{
 
 header label{
 	font-size: 3rem;
-	color: var(--color1);
+	color: var(--color01);
 	cursor: pointer;
 	visibility: hidden;
 	opacity: 0;
@@ -116,14 +135,20 @@ header label{
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	background: url(/img/inicio_fondo.png) no-repeat;
+	background: url(/img/inicio_fondo.jpg) no-repeat;
 	background-size: cover;
 	background-position: center;
 }
 
-.inicio .image img{
+.inicio-text{
+	background-color: rgba(0, 0, 0, 0.2);
+	padding: 10rem 5rem 10rem 5rem;
+	border-radius: 1rem;
+}
+
+/* .inicio .image img{
 	position: relative;
-	width: 40vh;
+	width: 25vh;
 	animation: float 3s linear infinite;
 }
 
@@ -134,98 +159,54 @@ header label{
 	50%{
 		transform: translateY(-3.5rem);
 	}
-}
+} */
 
 .inicio .content h3{
-	font-size: 5.5rem;
-	color: #333;
+	font-size: 7.5rem;
+	color: var(--color07);
 	text-transform: uppercase;
 }
 
 .inicio .content h3 span{
-	color: var(--color2);
+	color: var(--color04);
 	text-transform: uppercase;
 }
 
 .inicio .content p{
-	font-size: 1.7rem;
-	color: #666;
+	font-size: 4rem;
+	color: #ffffff;
 	padding: 1rem 0;
-}
-
-.detalles{
-	/* margin: 7.5rem 0 0 0; */
-	padding-top: 15rem;
-	min-height:  65vh;
-	padding-bottom: 15rem;
-}
-
-.detalles h1.heading{
-	margin: 5rem 0;
-}
-
-.detalles .caja-contenedor{
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-wrap: wrap;
-}
-
-.detalles .caja-contenedor .caja{
-	flex: 1 1 30rem;
-	background: white;
-	border-radius: 0.5rem;
-	border: .1rem solid rgba(0, 0, 0, .2);
-	box-shadow: 0.5rem 1rem rgba(0, 0, 0, .1);
-	margin: 1.5rem;
-	padding: 3rem 2rem;
-	border-radius: .5rem;
-	text-align: center;
-	transition: .2s linear;
-}
-
-.detalles .caja-contenedor .caja h3{
-	font-size: 2rem;
-	color: #333;
-	padding-top: 1rem;
-}
-
-.detalles .caja-contenedor .caja p{
-	font-size: 1.3rem;
-	color: #666;
-	padding: 1rem 0;
-}
-
-.detalles .caja-contenedor .caja img{
-	height: 15rem;
 }
 
 .acerca_de{
 	/* background: url(/img/fondo_2.png) no-repeat; */
 	/* background-size: cover;
 	background-position: center; */
+/* 	display: flex; */
+	align-items: center;
+	justify-content: center;
 	padding-top: 12rem;
 	padding-bottom: 12rem;
+/* 	flex-wrap: wrap; */
 }
 
-.acerca_de h1.heading{
+/* .acerca_de h1.heading{
 	margin: 5rem 0;
-}
+} */
 
-.acerca_de .columna{
+/* .acerca_de .columna{
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	flex-wrap: wrap;
 	padding: 5rem 0;
-}
+} */
 
 .acerca_de .columna image{
 	flex: 1 1 40rem;
 }
 
 .acerca_de .columna .image img{
-	width: 25%;
+	width: 50%;
 	/* width: 400px; Alternativa a la Etiqueta <center> */
 	/* margin: 0 auto; */
 }
@@ -236,14 +217,18 @@ header label{
 }
 
 .acerca_de .columna .content h3{
-	font-size: 3rem;
+	font-size: 2.5rem;
 	color: #333;
 	text-align: center;
 	text-transform: uppercase;
 }
 
+.acerca_de .columna .content .info{
+	margin: 50px 0 50px 0;
+}
+
 .acerca_de .columna .content h3 span{
-	color: rgb(38, 162, 13);
+	color: var(--color02);
 }
 
 .acerca_de .columna .content p{
@@ -256,210 +241,95 @@ header label{
 	margin-left: 2rem;
 }
 
-.suscribete{
+.acerca_de .columna .content .bottons a:last-child{
+	padding-right: 1em;
+}
+
+/* SECCION DE GALERIA */
+
+.suscribete {
 	text-align: center;
 	padding: 5rem 2rem;
-	background: url(/img/fondo_sub.png) no-repeat;
-	 background-size: cover;
-	 position: center;
-	 margin: 7rem 0 5rem;
+	background: url(/img/fondo_sub.jpg) no-repeat;
+	background-size: cover;
+	background-position: center;
+	margin: 7rem 0 5rem;
 }
 
-.suscribete h3{
-	color: white;
-	font-size: 3rem;
-	text-transform: uppercase;
+.instagram-posts {
+	/* Estilos para el contenedor de las publicaciones */
+	padding: 2rem;
+	background-color: rgba(0, 0, 0, 0.2);
+	border-radius: 1rem;
 }
 
-.suscribete p{
-	color: whitesmoke;
-	font-size: 1.6rem;
-	margin: 2rem auto;
-	width: 70rem;
-}
-
-.suscribete form{
+.post-contenedor {
+	/* Usamos Flexbox para organizar las publicaciones */
 	display: flex;
-	max-width: 70rem;
-	border: .2rem solid whitesmoke;
-	padding: .5rem;
-	border-radius: 5rem;
-	margin: 2rem auto;
-	height: 5.5rem;
-
-}
-
-.suscribete form input[type="email"]{
-	padding: 0 2rem;
-	font-size: 1.7ram;
-	background: none;
-	width: 100%;
-	color: white;
-	text-transform: none;
-	background: none;
-}
-
-.suscribete form input[type="email"]::placeholder{
-	color: white;
-	text-transform: capitalize;
-}
-
-.suscribete form input[type="submit"]{
-	background: white;
-	width: 20rem;
-	font-size: 1.7rem;
-	border-radius: 5rem;
-	cursor: pointer;
-	color: var(--color1);
-}
-
-.suscribete form input[type="submit"]:hover{
-	color: var(--color2);
-}
-
-.opiniones{
-	min-height:  75vh;
-	padding-top: 15rem;
-	padding-bottom: 15rem;
-}
-
-.opiniones h1.heading{
-	margin: 5rem 0;
-}
-
-.opiniones .caja-contenedor{
-	display: flex;
-	align-items: center;
 	justify-content: center;
 	flex-wrap: wrap;
-}
-
-.opiniones .caja-contenedor .caja{
-	background: white;
-	margin: 1rem;
-	padding: 1rem;
-	text-align: center;
-	position: relative;
-	border: .1rem solid rgba(0, 0, 0, .2);
-	box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
-	flex: 1 1 30rem;
-	border-radius: .5rem;
-}
-
-.opiniones .caja-contenedor .caja .fa-atom{
-	position: absolute;
-	top: 1rem;
-	right: 2rem;
-	font-size: 8rem;
-	color: var(--color2);
-	opacity: .3;
-}
-
-.opiniones .caja-contenedor .caja .user img{
-	border-radius: 50%;
-	object-fit: cover;
-	height: 15rem;
-	width: 15rem;
+	gap: 2rem; /* Espacio entre las publicaciones */
 	margin-top: 2rem;
 }
 
-.opiniones .caja-contenedor .caja .user h3{
-	color: var(--color1);
-	font-size: 2rem;
-}
-
-.opiniones .caja-contenedor .caja .user .stars i{
-	color: var(--color1);
-	font-size: 1.5rem;
-	padding: 1rem 0;
-}
-
-.opiniones .caja-contenedor .caja .comentarios{
-	color: #666;
-	font-size: 1.5rem;
-	padding: 1rem 5rem;
-}
-
-.precios{
-	min-height:  75vh;
-	padding-top: 10rem;
-	padding-bottom: 10rem;
-}
-
-.precios h1.heading{
-	margin: 5rem 0;
-}
-
-.precios h1.heading{
-	margin-bottom: 5rem;
-}
-
-.precios .caja-contenedor{
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	flex-wrap: wrap;
-}
-
-.precios .caja-contenedor .caja{
-	flex: 1 1 28rem;
-	margin: 1rem;
-	padding: 1rem;
-	background: white;
-	border: .1rem solid rgba(0, 0, 0, .2);
-	box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
-	border-radius: .5rem;
+.instagram-posts h3.heading {
+	/* Estilos para el encabezado de la sección */
+	color: white; /* Aseguramos que el título sea visible */
 	text-align: center;
-	padding-bottom: 3rem;
 }
 
-.precios .caja-contenedor .caja:nth-child(2),
-.precios .caja-contenedor .caja:hover{
-	border: .2rem solid var(--color2);
+.instagram-post-card {
+	/* Estilos para cada publicación individual */
+	flex: 1 1 30rem; /* Cada tarjeta ocupa 30rem, se adaptará */
+	max-width: 30rem;
+	background: #fff;
+	box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
+	border-radius: .5rem;
+	overflow: hidden;
 }
 
-.precios .caja-contenedor .caja .titulo{
-	color: var(--color1);
-	font-size: 2.5rem;
-	padding-top: 1rem;
+.instagram-post-card img {
+	width: 100%;
+	display: block;
+	transition: transform .3s ease;
 }
 
-.precios .caja-contenedor .caja .tipos{
-	font-size: 4rem;
-	color: var(--color2);
-	padding: 1rem 0;
+.instagram-post-card img:hover {
+	transform: scale(1.05);
 }
 
-.precios .caja-contenedor .caja .tipos span{
-	font-size: 2rem;
-}
+/* FIN DE LA SECCION DE GALERIA */
 
-.precios .caja-contenedor .caja ul{
-	padding: 1rem 0;
-	list-style: none;
-}
-
-.precios .caja-contenedor .caja ul li{
-	font-size: 1.7rem;
-	color: #333;
-	padding: .5rem 0;
-}
-
-.precios .caja-contenedor .caja ul li .fa-check{
-	color: lightgreen;
-}
-
-.precios .caja-contenedor .caja ul li .fa-xmark{
-	color: red;
-}
-
-.contactos{
+/* .contactos{
 	padding-top: 2rem;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	flex-wrap: wrap;
 	padding-bottom: 4rem;
+} */
+
+/* INICIO DE LOS ESTILOS PARA LA SECCIÓN DE CONTACTO MODIFICADA */
+
+.contactos {
+    /* El contenedor principal de la sección ahora apila sus elementos verticalmente */
+	display: flex;
+    flex-direction: column;
+	align-items: center; /* Centra el contenido horizontalmente */
+    text-align: center;
+	padding-top: 2rem;
+	padding-bottom: 4rem;
+}
+
+/* Nuevo contenedor para el ícono y el formulario, que ahora utiliza flexbox */
+
+.contact-content {
+	display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    gap: 3rem; /* Espacio entre el ícono y el formulario */
+    padding-top: 2rem;
 }
 
 .contactos .image{
@@ -480,7 +350,6 @@ header label{
 }
 
 .contactos .heading{
-	text-align: left;
 	padding: 0;
 	padding-bottom: 2rem;
 }
@@ -521,14 +390,18 @@ header label{
 .contactos form .inputcaja textarea:valid ~ label{
 	top: -.5rem;
 	font-size: 1.5rem;
-	color: var(--color2);
+	color: var(--color02);
 
+}
+
+.contador{
+	font-size: 1.7rem;
+    color: #666;
 }
 
 .footer{
 	padding-top: 3rem;
-	/* background: url(/img/footer-fondo.png) no-repeat; */
-	background-color: var(--color3);
+	background-color: var(--color03);
 	background-size: cover;
 	background-position: center;
 }
@@ -543,13 +416,13 @@ header label{
 
 .footer .caja-contenedor .caja{
 	flex: 1 1 25rem;
-	margin: 4em;
+	margin: 2em;
 }
 
 .footer .caja-contenedor .caja h3{
 	font-size: 2rem;
 	padding: 1rem 0;
-	color: rgb(0, 0, 0);
+	color: var(--color06);
 	/* text-decoration: underline rgb(255, 254, 255); */
 	/* text-underline-offset: 0.5rem; */
 	/* -webkit-text-stroke: 0.05px rgb(180, 43, 180); */
@@ -558,7 +431,7 @@ header label{
 .footer .caja-contenedor .caja p{
 	font-size: 1.4rem;
 	padding: 1.4rem 0;
-	color: rgb(0, 0, 0);
+	color: var(--color06);
 }
 
 .footer .caja-contenedor .caja p.texto{
@@ -569,7 +442,7 @@ header label{
 	display: block;
 	font-size: 2rem;
 	padding: .5rem 0;
-	color: rgb(5, 5, 5);
+	color: var(--color06);
 }
 
 .footer .caja-contenedor .caja a:hover{
@@ -586,8 +459,8 @@ header label{
 	margin: .5rem 0;
 	margin-right: 1rem;
 	border-radius: 50%;
-	background: rgb(117, 46, 46);
-	color: var(--color1);
+	background: rgb(255, 255, 255);
+	color: var(--color01);
 	font-size: 1.8rem;
 	height: 4.5rem;
 	width: 4.5rem;
@@ -604,8 +477,8 @@ header label{
 	font-size: 1.5rem;
 	font-weight: normal;
 	letter-spacing: .1rem;
-	color: rgb(255, 255, 255);
-	border-top: .1rem solid rgb(151, 64, 64);
+	color: var(--color06);
+	border-top: 0.2rem solid var(--color04);
 	padding: 2.5rem 1rem;
 	text-align: center;
 }
@@ -624,6 +497,11 @@ header label{
 	}
 	section#inicio{
 		padding-top: 15rem;
+	}
+	
+	.contactos .image img{
+	width: 50%;
+	padding: 2rem;
 	}
 }
 
@@ -683,18 +561,23 @@ header label{
 		background-position: right;
 	}
 
-	.suscribete  p{
-		width: auto;
+	.post-contenedor {
+		gap: 1rem;
+	}
+
+	.contactos .image img{
+	width: 50%;
+	padding: 2rem;
 	}
 }
 
 @media(max-width:450px){
 	html{
-		font-size: 49%;
+		font-size: 55%;
 	}
 
 	.acerca_de .columna .content h3{
-		font-size: 3rem;
+		font-size: 2.5rem;
 		color: #333;
 		text-align: center;
 	}
