--- a/template8/estilos.css
+++ b/template8/estilos.css
@@ -132,8 +132,8 @@ header label{
 }
 
 .inicio{
-	display: flex;
-	align-items: center;
+    display: grid;
+    align-items: center;
 	justify-content: center;
 	background: url(/img/inicio_fondo.jpg) no-repeat;
 	background-size: cover;
