Update display property of contact-content
Change display property of contact-content from flex to initial.

--- a/template8/estilos.css
+++ b/template8/estilos.css
@@ -226,7 +226,7 @@ header label{
 /* Nuevo contenedor para el ícono y el formulario, que ahora utiliza flexbox */
 
 .contact-content {
-	display: flex;
+	display: initial;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
