--- a/template8/estilos.css
+++ b/template8/estilos.css
@@ -226,29 +226,18 @@ header label{
 /* Nuevo contenedor para el ícono y el formulario, que ahora utiliza flexbox */
 
 .contact-content {
-	display: initial;
-    flex-wrap: wrap;
     align-items: center;
     justify-content: center;
     gap: 3rem; /* Espacio entre el ícono y el formulario */
     padding-top: 2rem;
 }
 
-.contactos .image{
-	flex: 1 1 40rem;
-}
-
-.contactos .image img{
-	width: 80%;
-	padding: 2rem;
-}
-
 .contactos form{
-	flex: 0 0 70rem;
 	padding: 2rem 3rem;
 	border: .1rem solid rgba(0, 0, 0, .2);
 	box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
 	border-radius: .5rem;
+	margin-top: 20%;
 }
 
 .contactos .heading{
