Change margin-top from 12% to 20vh

--- a/template8/estilos.css
+++ b/template8/estilos.css
@@ -236,7 +236,7 @@ header label{
 	border: .1rem solid rgba(0, 0, 0, .2);
 	box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .1);
 	border-radius: .5rem;
-	margin-top: 12%;
+	margin-top: 20vh;
 }
 
 .contactos .heading{
