--- a/template8/estilos.css
+++ b/template8/estilos.css
@@ -232,12 +232,14 @@ header label {
   font-weight: bold;
 }
 
-.footer .creditos {
-  font-size: 1.5rem;
-  color: var(--color04);
-  border-top: 0.2rem solid var(--color04);
-  padding: 2.5rem 1rem;
-  text-align: center;
+.footer .creditos{
+	font-size: 1.5rem;
+	font-weight: normal;
+	letter-spacing: .1rem;
+	color: var(--color04);
+	border-top: 0.2rem solid var(--color04);
+	padding: 2.5rem 1rem;
+	text-align: center;
 }
 
 /* ===== RESPONSIVE ===== */
