--- a/template9/css/style.css
+++ b/template9/css/style.css
@@ -49,6 +49,7 @@ section {
   background-color: #f5f5f5;
   border-radius: 8px;
   margin-bottom: 20px;
+  border-left: 2px solid #ccc;
 }
 
 .atraccion {
@@ -133,4 +134,12 @@ body.dark-mode aside a {
 
 body.dark-mode aside a:hover {
   color: #00cccc;
+}
+
+@media(max-width:768px){
+
+    .main-container {
+        display: grid;
+    }
+
 }
