--- a/style.css
+++ b/style.css
@@ -268,7 +268,7 @@ li {
     flex-direction: column;
 	align-items: center;
     text-align: center;
-	padding: 5rem 0;
+	padding: 5rem;
 }
 
 /* Contenedor que organiza la imagen y el formulario */
